# ROAR-Msgs

./: CMakeLists.txt  README.md  package.xml
action/: SwtichMode.action
msg/: ArmControl.msg  Drilling.msg  DrillingCommand.msg  DrillingManualInput.msg  DrillingStatus.msg  EncoderStamped.msg  HeartBeat.msg  IndicatorLight.msg  LightTower.msg  NodeStatus.msg  Obstacle.msg  ObstacleArray.msg  RoverStatus.msg
srv/: MissionControl.srv  StartModule.srv  StopModule.srv
